--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -218,6 +218,25 @@ mouse.tooltip:hover span {
 	z-index: 1001;
 }
 
+#mobileStats {
+	position: fixed;
+	left: 0px;
+	top: 50px;
+	z-index: 299;
+	padding: 0;
+	width: 2em;
+}
+
+#mobileStats .stat {
+	border: 1px solid #444;
+	text-align: center;
+	font-weight: 500;
+	font-size: 1.2em;
+	line-height: 1;
+	padding: .3em 0;
+	margin-top: 2px;
+}
+
 #savesList {
 	border: 1px solid #ccc;
 	max-width: 700px;
@@ -320,6 +339,10 @@ mouse.tooltip:hover span {
 
 #ui-bar {
 	z-index: 300;
+}
+
+.stowed{
+	z-index: 298  !important;
 }
 
 .debugLines-audience {
