Fix to exploit in feats
- Feats will now only transfer to new games to prevent save scumming

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -321,6 +321,12 @@ mouse.tooltip:hover span {
 	overflow-y: hidden;
 }
 
+#savesListContainer .savesListRow .saveGroup .deleteButton {
+	display: flex;
+	justify-content: right;
+	margin: 0;
+}
+
 .datestamp {
 	font-size: 13px;
 }
